--- a/src/skills/Skills.module.css
+++ b/src/skills/Skills.module.css
@@ -1,6 +1,7 @@
 .skillsBlock {
     height: 100vh;
     background-color: rgb(204, 255, 255);
+    
 }
 .skillsContainer {
     flex-direction: column;
@@ -12,4 +13,7 @@
 .skills{
     border: 1px solid;
     width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
