--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -4,13 +4,14 @@ background-color: rgb(206, 203, 255);
 display: flex;
 flex-direction: column;
 align-items: center;
-text-align: center;
+text-align: left ;
 }
 
-.icon {
-width: 80px;
-height: 80px;
-background-color: lightgreen;    
+.img {
+width: 250px;
+height: 250px;
+background-color: rgb(255, 195, 237);
+position: relative;    
 }
 
 .description {
