--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -4,10 +4,14 @@ background-color: rgb(206, 203, 255);
 display: flex;
 flex-direction: column;
 align-items: center;
-text-align: left ;
+text-align: left;
 }
 
 .img {
+display: flex;
+flex-direction:column;
+align-items: center;
+
 width: 250px;
 height: 250px;
 background-color: rgb(255, 195, 237);
@@ -17,3 +21,23 @@ position: relative;
 .description {
 
 }
+
+.button {
+    
+    font-weight: 700;
+    color: white;
+    text-decoration: none;
+    padding: .8em 1em calc(.8em + 3px);
+    border-radius: 3px;
+    background: rgb(81, 53, 85);
+    box-shadow: 0 -3px rgb(33, 34, 34) inset;
+    transition: 0.2s;
+    border-radius: 10px;
+    } 
+.button:hover {
+    background: rgb(186, 129, 194);
+    }
+.button:active {
+    background: rgb(247, 178, 255);
+    box-shadow: 0 3px rgb(33, 34, 34) inset;
+    }
