--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -1,8 +1,8 @@
-.contactsBlock {
-    height: 100vh;
-    background-color: rgb(169, 204, 155);
+.footerBlock {
+    height: 30vh;
+    background-color: rgb(248, 212, 192);
 }
-.contactsContainer {
+.footerContainer {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -10,22 +10,26 @@
     justify-content: space-around;
 }
 .title {
-width: 500px;
-background-color: rgb(255, 177, 104);
+width: 300px;
+background-color: rgb(104, 182, 255);
 color: rgb(29, 28, 56);
 font-size:larger;
 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
-.form {
-    height: 250px;
-    width: 400px;
-    background-color: rgb(118, 201, 204);
+.messengersBlock {
+    height: 80px;
+    width: 600px;
+    background-color: rgb(225, 253, 206);
     display: flex;
-    flex-direction: column;
-    justify-content: start;
+    
+    justify-content: space-between;
 }
-
+.messenger {
+    height: 80px;
+    width: 80px;
+    background-color: rgb(78, 80, 77);
+}
 .button {
     height: 60px;
     width: 120px;
