--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footerBlock {
-    height: 30vh;
+   
     background-color: rgb(248, 212, 192);
 }
 .footerContainer {
@@ -10,8 +10,8 @@
     justify-content: space-around;
 }
 .title {
-width: 300px;
-background-color: rgb(104, 182, 255);
+width: 100%;
+background-color: rgb(164, 211, 255);
 color: rgb(29, 28, 56);
 font-size:larger;
 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
@@ -19,16 +19,16 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
 
 .messengersBlock {
     height: 80px;
-    width: 600px;
+    width: 280px;
     background-color: rgb(225, 253, 206);
     display: flex;
     
     justify-content: space-between;
 }
 .messenger {
-    height: 80px;
-    width: 80px;
-    background-color: rgb(78, 80, 77);
+    height: 60px;
+    width: 60px;
+    background-color: rgb(146, 132, 223);
 }
 .button {
     height: 60px;
