--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -15,11 +15,16 @@ justify-content: center;
 align-items: center;
 width: 250px;
 height: 250px;
-background-color: rgb(230, 204, 255);
-/* background-image: url("https://intersog.com/wp-content/uploads/2017/04/Screen-Shot-2017-04-14-at-3.44.02-PM-e1492176136977.png");
+/*background-color: grey;
 background-size: cover;
-background-position: center;  */  
+background-position: center;*/
 }
+.img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
 
 .description {
 
