--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -15,10 +15,11 @@ justify-content: center;
 align-items: center;
 width: 250px;
 height: 250px;
-/*background-color: grey;
+background-color: rgb(216, 206, 206);
 background-size: cover;
-background-position: center;*/
+background-position: center;
 }
+
 .img {
     max-width: 100%;
     height: auto;
