--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -10,11 +10,11 @@
     justify-content: space-around;
 }
 .title {
-width: 100%;
-background-color: rgb(255, 177, 104);
-color: rgb(29, 28, 56);
-font-size:larger;
-font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    width: 100%;
+    background-color: rgb(255, 177, 104);
+    color: rgb(29, 28, 56);
+    font-size:larger;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode'
 }
 
 .form {
@@ -38,9 +38,11 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
     transition: 0.2s;
     border-radius: 10px;
     } 
+
 .button:hover {
     background: rgb(79, 148, 79);
     }
+
 .button:active {
     background: rgb(142, 189, 135);
     box-shadow: 0 3px rgb(33, 34, 34) inset;
