--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -1,23 +1,28 @@
 .project{
-width: 250px;
-background-color: rgb(206, 203, 255);
-display: flex;
-flex-direction: column;
-align-items: center;
-text-align: left;
+    width: 250px;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+    color: rgba(198,201,216,.75);
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: center !important;
 }
 
 .imgContainer {
-width: 100%;
-display: flex;
-flex-direction:column;
-justify-content: center;
-align-items: center;
-width: 250px;
-height: 250px;
-background-color: rgb(216, 206, 206);
-background-size: cover;
-background-position: center;
+    width: 100%;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    height: 250px;
+    background-color: rgb(216, 206, 206);
+    background-size: cover;
+    background-position: center;
 }
 
 .img {
@@ -26,13 +31,7 @@ background-position: center;
     display: block;
 }
 
-
-.description {
-
-}
-
 .button {
-    
     font-weight: 700;
     color: white;
     text-decoration: none;
