--- a/src/hideMe/HideMe.module.css
+++ b/src/hideMe/HideMe.module.css
@@ -4,9 +4,8 @@
 }
 .remoteContainer {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: baseline;
     justify-content: space-around;
 }
 .title {
@@ -36,4 +35,13 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
 .button:active {
     background: rgb(250, 255, 207);
     box-shadow: 0 3px rgb(33, 34, 34) inset;
+    }
+    .foto {
+        width: 300px;
+        height: 400px;
+        background-color: beige;
+    }
+    .contacts {
+        flex-direction: column;
+        justify-content: flex-start;
     }
