--- a/src/hideMe/HideMe.module.css
+++ b/src/hideMe/HideMe.module.css
@@ -1,8 +1,8 @@
-.remoteBlock {
+.hideMeBlock {
     min-height: 40vh;
     background-color: rgb(141, 180, 182);
 }
-.remoteContainer {
+.hideMeContainer {
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
