--- a/src/nav/Nav.module.css
+++ b/src/nav/Nav.module.css
@@ -1,6 +1,20 @@
 .nav {
-border: 1px solid;
-width: 400px;
-display: flex;
-justify-content: space-between;
+    border: 1px solid;
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 20px 0;
+    font-family: Poppins,sans-serif;
+}
+
+.nav a {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 20px 0;
+    font-family: Poppins,sans-serif;
+    text-decoration: none;
 }
