--- a/src/hideMe/HideMe.module.css
+++ b/src/hideMe/HideMe.module.css
@@ -9,13 +9,12 @@
     justify-content: space-around;
 }
 .title {
-width: 100%;
-background-color: rgb(210, 247, 123);
-color: rgb(29, 28, 56);
-font-size:larger;
-font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    width: 100%;
+    background-color: rgb(210, 247, 123);
+    color: rgb(29, 28, 56);
+    font-size:larger;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
 .button {
     height: 60px;
     width: 120px;
@@ -31,17 +30,17 @@ font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans 
     } 
 .button:hover {
     background: rgb(253, 228, 83);
-    }
+}
 .button:active {
     background: rgb(250, 255, 207);
     box-shadow: 0 3px rgb(33, 34, 34) inset;
-    }
-    .foto {
-        width: 300px;
-        height: 400px;
-        background-color: beige;
-    }
-    .contacts {
-        flex-direction: column;
-        justify-content: flex-start;
-    }
+}
+.foto {
+    width: 300px;
+    height: 400px;
+    background-color: beige;
+}
+.contacts {
+    flex-direction: column;
+     justify-content: flex-start;
+}
