--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -1,6 +1,6 @@
 .projectsBlock {
     min-height: 100vh;
-    background-color: rgb(250, 224, 152);
+    background-color: rgb(33, 56, 51);
     
 }
 .projectsContainer {
@@ -16,5 +16,6 @@
     justify-content: space-around;
     flex-wrap: wrap;
     box-sizing: border-box;
+    margin-top: 30px;
 }
 
