--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -1,16 +1,27 @@
 .project{
     width: 250px;
     background-color: rgb(0, 0, 0);
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    text-align: left;
-    color: rgba(198,201,216,.75);
-    font-weight: 300;
-    font-size: 18px;
+
+}
+.description{
+    color: #c6c9d8;
+    font-size: 14px;
     line-height: 30px;
     text-align: center !important;
+    margin: 0 0 15px;
+    font-family: Poppins,sans-serif;
+    font-weight: 400;
 }
+
+.projectTitle{
+    font-size: 24px;
+    line-height: 36px;
+    color: #fff;
+    font-weight: 600;
+    font-family: Poppins,sans-serif;
+    margin: 0 0 15px;
+} 
 
 .imgContainer {
     width: 100%;
@@ -30,22 +41,3 @@
     height: auto;
     display: block;
 }
-
-.button {
-    font-weight: 700;
-    color: white;
-    text-decoration: none;
-    padding: .8em 1em calc(.8em + 3px);
-    border-radius: 3px;
-    background: rgb(81, 53, 85);
-    box-shadow: 0 -3px rgb(33, 34, 34) inset;
-    transition: 0.2s;
-    border-radius: 10px;
-    } 
-.button:hover {
-    background: rgb(186, 129, 194);
-    }
-.button:active {
-    background: rgb(247, 178, 255);
-    box-shadow: 0 3px rgb(33, 34, 34) inset;
-    }
