--- a/src/skills/Skills.module.css
+++ b/src/skills/Skills.module.css
@@ -6,8 +6,7 @@
 }
 .skillsContainer {
     flex-direction: column;
-    justify-content: flex-start;
-    
+    justify-content: flex-start;    
 }
 .title {
     background-color: rgba(255, 246, 234, 0.795);
@@ -19,4 +18,5 @@
     justify-content: space-around;
     box-sizing: border-box;
     flex-wrap: wrap;
+    margin-top: 30px;
 }
