--- a/src/hideMe/HideMe.module.css
+++ b/src/hideMe/HideMe.module.css
@@ -13,7 +13,7 @@
     background-color: rgb(210, 247, 123);
     color: rgb(29, 28, 56);
     font-size:larger;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', Verdana, sans-serif;
 }
 .button {
     height: 60px;
