--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -1,17 +1,7 @@
 .project{
-    width: 250px;
-    background-color: rgb(0, 0, 0);
-    align-items: center;
-
-}
-.description{
-    color: #c6c9d8;
-    font-size: 14px;
-    line-height: 30px;
-    text-align: center !important;
-    margin: 0 0 15px;
-    font-family: Poppins,sans-serif;
-    font-weight: 400;
+    width: 400px;
+    background: #191919;
+    text-align: left;
 }
 
 .projectTitle{
@@ -19,21 +9,27 @@
     line-height: 36px;
     color: #fff;
     font-weight: 600;
-    font-family: Poppins,sans-serif;
+    font-family: 'Poppins',sans-serif;
     margin: 0 0 15px;
 } 
 
+.description{
+    color: #c6c9d8;
+    font-size: 14px;
+    line-height: 30px;
+    margin: 0 0 15px;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 400;
+}
+
 .imgContainer {
     width: 100%;
+    height: 250px;
     display: flex;
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    width: 250px;
-    height: 250px;
     background-color: rgb(216, 206, 206);
-    background-size: cover;
-    background-position: center;
 }
 
 .img {
