--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -1,6 +1,6 @@
 .projectsBlock {
     min-height: 100vh;
-    background-color: rgb(33, 56, 51);
+    background-color: black;
     
 }
 .projectsContainer {
@@ -18,5 +18,6 @@
     flex-wrap: wrap;
     box-sizing: border-box;
     margin-top: 30px;
+    align-items: flex-start;
 }
 
