--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -1,19 +1,18 @@
-.project{
+.project {
     width: 400px;
     background: #191919;
     text-align: left;
 }
 
-.projectTitle{
+.projectTitle {
     font-size: 24px;
     line-height: 36px;
     color: #fff;
     font-weight: 600;
     font-family: 'Poppins',sans-serif;
-    margin: 0 0 15px;
 } 
 
-.description{
+.description {
     color: #c6c9d8;
     font-size: 14px;
     line-height: 30px;
@@ -22,11 +21,28 @@
     font-weight: 400;
 }
 
-.imgContainer {
+.image {
+    border-radius: 5px;
     height: 250px;
     display: flex;
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(216, 206, 206);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: 0.5s;
+}
+.image:hover {
+    border-radius: 5px;
+    height: 250px;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transform: scale(1.05);
+    transition: 0.5s;
 }
