--- a/src/hideMe/HideMe.module.css
+++ b/src/hideMe/HideMe.module.css
@@ -1,46 +1,24 @@
 .hideMeBlock {
-    min-height: 40vh;
-    background-color: rgb(141, 180, 182);
+    min-height: 100vh;
+    background: #191919;
 }
+
 .hideMeContainer {
+    height: 70vh;
     display: flex;
     flex-wrap: wrap;
-    align-items: baseline;
+    align-items: center;
     justify-content: space-around;
 }
-.title {
-    width: 100%;
-    background-color: rgb(210, 247, 123);
-    color: rgb(29, 28, 56);
-    font-size:larger;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', Verdana, sans-serif;
+
+.contacts {
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
 }
-.button {
-    height: 60px;
-    width: 120px;
-    font-weight: 700;
-    color: rgb(255, 71, 71);
-    text-decoration: none;
-    padding: .8em 1em calc(.8em + 3px);
-    border-radius: 3px;
-    background: rgb(230, 228, 117);
-    box-shadow: 0 -3px rgb(34, 34, 33) inset;
-    transition: 0.2s;
-    border-radius: 10px;
-    } 
-.button:hover {
-    background: rgb(253, 228, 83);
-}
-.button:active {
-    background: rgb(250, 255, 207);
-    box-shadow: 0 3px rgb(33, 34, 34) inset;
-}
+
 .foto {
     width: 300px;
     height: 400px;
     background-color: beige;
-}
-.contacts {
-    flex-direction: column;
-     justify-content: flex-start;
 }
