--- a/src/nav/Nav.module.css
+++ b/src/nav/Nav.module.css
@@ -3,18 +3,13 @@
     width: 400px;
     display: flex;
     justify-content: space-between;
-    color: #fff;
-    font-size: 16px;
-    font-weight: 500;
-    padding: 20px 0;
-    font-family: Poppins,sans-serif;
 }
 
 .nav a {
+    font-family: 'Poppins',sans-serif;
     color: #fff;
     font-size: 16px;
     font-weight: 500;
     padding: 20px 0;
-    font-family: Poppins,sans-serif;
     text-decoration: none;
 }
