--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -1,30 +1,14 @@
+@import '../../common//styles//sass//mixins.scss';
+
 .project {
     width: 400px;
     background: #191919;
     text-align: left;
     .image {
-        border-radius: 5px;
-        height: 250px;
-        display: flex;
-        flex-direction:column;
-        justify-content: center;
-        align-items: center;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        transition: 0.5s;
+        @include projetsImage ();
         &:hover {
-            border-radius: 5px;
-            height: 250px;
-            display: flex;
-            flex-direction:column;
-            justify-content: center;
-            align-items: center;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+            @include projetsImage ();
             transform: scale(1.05);
-            transition: 0.5s;
         }
     }
     .projectTitle {
