--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -1,6 +1,6 @@
 $titleColor: #fff;
 $descriptionColor: rgba(198,201,216,.75);
-$primeryColor: #dc3545;
+$primeryColor: #ca3c08;
 $backgroundColor: black;
 $backgroundSecondColor: #191919;
 $fontFamily: 'Poppins',sans-serif;
