--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -18,4 +18,8 @@
     line-height: 1.71429;
     font-family: 'Poppins',sans-serif;
     color: #1d1d24;
+    margin-right: -15px;
+    margin-left: -15px;
+    font-weight: 400;
+    text-align: left;
 }
