--- a/src/skills/skill/Skill.module.css
+++ b/src/skills/skill/Skill.module.css
@@ -1,18 +1,36 @@
-.skill{
-width: 250px;
-background-color: cadetblue;
-display: flex;
-flex-direction: column;
-align-items: center;
-text-align: center;
+.logo {
+
 }
 
-.icon {
-width: 80px;
-height: 80px;
-background-color: lightgreen;    
+.skill {
+padding: 60px 45px;
+width: 300px;
+background: #191919;
+background-color: black;
+display: flex;
+flex-direction: column;
+margin-top: 30px;
+position: relative;
+border-radius: 10px;
+}
+
+.title {
+    margin-bottom: 19px;
+    font-weight: 500;
+    color: #fff;
+    font-size: 24px;
+    font-family: 'Poppins',sans-serif;
+    line-height: 1.4074;
+    margin: 0 0 15px;
+    text-align: left;
 }
 
 .description {
-
+    color: rgba(198,201,216,.75);
+    font-family: 'Poppins',sans-serif;
+    font-weight: 400;
+    text-align: left;
+    font-size: 18px;
+    line-height: 30px;
+    margin: 0 0 15px;
 }
