--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -1,7 +1,7 @@
 $titleColor: #fff;
 $descriptionColor: rgba(198,201,216,.75);
-$primeryColor: #ca3c08;
-$backgroundColor: black;
+$primeryColor:   #f9004d;
+$backgroundColor: #1d1d24;
 $backgroundSecondColor: #191919;
 $fontFamily: 'Poppins',sans-serif;
 
