--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .App {
   text-align: center;
 }
+tr:nth-child(odd) {
+background-color: aquamarine;
+}
+tr:nth-child(even) {
+background-color: blue;
+}
