--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -2,7 +2,7 @@
 
 .skillsBlock {
     min-height: 100vh;
-    background-color: $backgroundSecondColor;
+    background-color: #101010;
 }
 .skillsContainer {
     flex-direction: column;
