--- a/src/header/Header.module.css
+++ b/src/header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
     padding-left: 50px;
     padding-right: 50px;
-    background: #101010;
+    background: black;
     display: block;
 }
