--- a/src/header/Header.module.css
+++ b/src/header/Header.module.css
@@ -1,6 +1,8 @@
 .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     padding-left: 50px;
     padding-right: 50px;
-    background: black;
-    display: block;
+    background-color: black;
 }
