--- a/src/nav/Nav.module.css
+++ b/src/nav/Nav.module.css
@@ -4,11 +4,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    list-style: none;  
 }
 
 .logo {
-    height: 60px;
-    width: 60px;
+    height: 55px;
+    width: 55px;
 }
 
 .menu a {
