--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -6,9 +6,10 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-around;
 }
+
 .title {
     width: 100%;
     background-color: rgb(255, 177, 104);
@@ -18,11 +19,16 @@
 }
 
 .form {
-    width: 280px;
+    width: 500px;
+    height: 40px;
     background-color: rgb(118, 201, 204);
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
+    padding-top: 20px ;
+  
+    
+
 }
 
 .button {
