--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -1,6 +1,6 @@
 .contactsBlock {
     min-height: 40vh;
-    background-color: rgb(169, 204, 155);
+   
 }
 .contactsContainer {
     display: flex;
@@ -18,16 +18,34 @@
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode'
 }
 
-.form {
-    width: 500px;
-    height: 40px;
-    background-color: rgb(118, 201, 204);
+.formsBlock {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 20px ;
-  
-    
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+.inputForm {
+    font-size: 14px;
+    line-height: 1.71429;
+    font-family: Poppins,sans-serif;
+    color: #1d1d24;
+    font-weight: 400;
+    text-align: left;
+    color: rgba(198,201,216,.75);
+    border: 2px solid hsla(0,0%,100%,.2);
+    display: block;
+    width: 100%;
+    padding: 0 20px;
+    border-radius: 5px;
+    transition: all .3s ease;
+    height: 50px;
+    line-height: 46px;
+    margin-bottom: 20px;
+    outline: none;
+    font-size: 15px;
+    letter-spacing: .1px;
+    font-family: Source Sans Pro,Helvetica,sans-serif;
 
 }
 
