--- a/src/hireMe/HireMe.module.css
+++ b/src/hireMe/HireMe.module.css
@@ -19,7 +19,11 @@
 }
 
 .foto {
-    width: 300px;
-    height: 400px;
+    width: 400px;
+    height: 500px;
     background-color: beige;
+}
+
+.titleHireMe {
+    white-space: pre-wrap;
 }
