--- a/src/common/components/title/Title.module.scss
+++ b/src/common/components/title/Title.module.scss
@@ -19,6 +19,7 @@
 .title span{
     padding-top: 10px;
     color: $descriptionColor;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 18px;
+    line-height: 30px;
 }
