--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -1,45 +1,31 @@
 .contactsBlock {
     min-height: 40vh;
-
 }
 
-.contactsContainer {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: space-around;
-}
-
-.formsBlock {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: flex-start;
+.error {
+    color: #f9004d;
+    font-size: 16px;
 }
 
 .inputForm {
-    font-size: 14px;
-    line-height: 1.71429;
-    font-family: Poppins, sans-serif;
-    color: #1d1d24;
-    font-weight: 400;
+    background: transparent;
     text-align: left;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.71429;
     color: rgba(198, 201, 216, .75);
     border: 2px solid hsla(0, 0%, 100%, .2);
     display: block;
     width: 100%;
     padding: 0 20px;
     border-radius: 5px;
-    transition: all .3s ease;
     height: 50px;
     line-height: 46px;
     margin-bottom: 20px;
     outline: none;
-    font-size: 15px;
-    letter-spacing: .1px;
+    letter-spacing: .2px;
     font-family: Source Sans Pro, Helvetica, sans-serif;
+
 }
 
 .button {
@@ -63,6 +49,7 @@
 }
 
 .button:active {
-    background: rgb(142, 189, 135);
-    box-shadow: 0 3px rgb(33, 34, 34) inset;
+    border: 2px solid #f9004d;
+    background: #f9004d;
+    color: #fff;
 }
