--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -1,29 +1,20 @@
 .footerBlock {
-    min-height: 20vh;
+    min-height: 15vh;
     background-color: black;
 }
 
 .footerContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    padding: 30px 0;
 }
 
-.title {
-    background-color: rgb(174, 210, 219);
-    color: rgb(29, 28, 56);
-    font-size: larger;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-}
-
-.copyright{
-    color: aliceblue;
-
-}
-.messenger {
-    height: 60px;
-    width: 60px;
-    background-color: rgb(146, 132, 223);
+.copyright {
+    padding-top: 10px;
+    font-family: Poppins, sans-serif;
+    color: #c6c9d8;
+    opacity: .75;
+    margin-bottom: 0;
+    line-height: 30px;
 }
