--- a/src/nav/Nav.module.css
+++ b/src/nav/Nav.module.css
@@ -12,13 +12,19 @@
     width: 55px;
 }
 
-.menu a {
-    font-family: 'Poppins', sans-serif;
-    color: #fff;
+.nav a {
+    font-family: Poppins,sans-serif;
+    color: rgb(255, 255, 255);
     font-size: 16px;
     font-weight: 500;
     padding: 20px 0;
     text-decoration: none;
     line-height: 1.71429;
     text-align: left;
+}
+
+.nav a:hover {
+	color: #F46119;
+   background: rgba(244, 97, 25, 0.05);
+
 }
