--- a/src/common/components/title/Title.module.scss
+++ b/src/common/components/title/Title.module.scss
@@ -3,23 +3,24 @@
 .title {
     display: flex;
     flex-direction: column;
-    align-items: center;   
-    font-family: 'Poppins',sans-serif;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    & h2 {
+        line-height: 1.4074;
+        font-size: 60px;
+        color: $titleColor;
+        font-weight: 700;
+        margin: 0 0 15px;
+        margin-bottom: 8px;
+    }
+    & span {
+        padding-top: 10px;
+        color: $descriptionColor;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 30px;
+    }
 }
 
-.title h2{
-    line-height: 1.4074;
-    font-size: 60px;
-    color: $titleColor;
-    font-weight: 700;
-    margin: 0 0 15px;
-    margin-bottom: 8px;
-}
 
-.title span{
-    padding-top: 10px;
-    color: $descriptionColor;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 30px;
-}
+
