css to scss (main hireMe footer header)

--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -1,7 +1,7 @@
 $titleColor: #fff;
-$descriptionColor: rgba(198,201,216,.75);
-$primeryColor:   #f9004d;
-$backgroundColor: #101010;
-$backgroundSecondColor: #191919;
-$fontFamily: 'Poppins',sans-serif;
-
+$descriptionColor: rgba(198, 201, 216, .75);
+$primeryColor: #f9004d;
+$backgroundMainColor: black;
+$backgroundSecondColor: #101010;
+$backgroundDescriptionColor: #191919;
+$fontFamily: 'Poppins', sans-serif;
