--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -30,7 +30,7 @@
 
     .button {
         border: 2px solid $primeryColor;
-        background: $backgroundColor;
+        background: $backgroundSecondColor;
         color: $primeryColor;
         border-radius: 6px;
         cursor: pointer;
