--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,3 +1,5 @@
+@import '../common/styles/sass/variables.scss';
+
 .header {
     padding-top: 25px;
     display: flex;
@@ -5,5 +7,5 @@
     justify-content: space-between;
     padding-left: 50px;
     padding-right: 50px;
-    background-color: black;
+    background-color: $backgroundMainColor;
 }
