--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -4,4 +4,4 @@ $primeryColor: #f9004d;
 $backgroundMainColor: black;
 $backgroundSecondColor: #101010;
 $backgroundDescriptionColor: #191919;
-$fontFamily: 'Poppins', sans-serif;
+$fontFamilyPoppins: 'Poppins', sans-serif;
