--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -49,14 +49,9 @@
 
         &:active {
             border: 2px solid $primeryColor;
-            background: $primeryColor;
+            background: $backgroundSecondColor;
             color: $titleColor;
         }
+        
     }
-
-
-
-
-
-
 }
