--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -10,7 +10,7 @@
         align-items: center;
         .copyright {
             padding-top: 10px;
-            font-family: $fontFamily;
+            font-family: 'Poppins', sans-serif;
             color: $descriptionColor;
             opacity: .75;
             margin-bottom: 0;
