--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -31,7 +31,7 @@
                 letter-spacing: 4px;
                 margin-bottom: 20px;
                 line-height: 1.71429;
-                font-family: $fontFamily;
+                font-family: 'Poppins', sans-serif;
                 font-weight: 400;
             }
 
@@ -60,7 +60,7 @@
                 margin: 0 0 15px;
                 font-size: 54px;
                 font-weight: 700;
-                font-family: $fontFamily;
+                font-family: 'Poppins', sans-serif;
                 line-height: 1.4074;
                 color: $titleColor;
             }
