--- a/src/nav/Nav.module.scss
+++ b/src/nav/Nav.module.scss
@@ -9,7 +9,7 @@
     list-style: none;
 
     & a {
-        font-family: $fontFamily;
+        font-family: 'Poppins', sans-serif;
         color: $titleColor;
         font-size: 16px;
         font-weight: 500;
