--- a/src/skills/skill/Skill.module.scss
+++ b/src/skills/skill/Skill.module.scss
@@ -1,3 +1,4 @@
+@import '../../common/styles/sass/mixins.scss';
 @import '../../common/styles/sass/variables.scss';
 
 .icon {
@@ -16,23 +17,25 @@
     background-color: $backgroundDescriptionColor;
 
     & h3 {
-        margin-bottom: 19px;
-        font-weight: 500;
-        color: $titleColor;
-        font-size: 24px;
-        font-family: $fontFamily;
+    /*  font-size: 24px;
         line-height: 1.4074;
+        font-weight: 500;
+        font-family: 'Poppins', sans-serif;
+        color: $titleColor; */
+        @include text (24px, 1.4074, 500, $fontFamilyPoppins, $titleColor);
+        margin-bottom: 19px;
         margin: 0 0 15px;
         text-align: left;
     }
 
     & span {
-        color: $descriptionColor;
-        font-family: $fontFamily;
-        font-weight: 400;
-        text-align: left;
-        font-size: 18px;
+/*      font-size: 18px;
         line-height: 30px;
+        font-weight: 400;
+        font-family: 'Poppins', sans-serif;
+        color: $descriptionColor; */
+        @include text (18px, 30px, 400, $fontFamilyPoppins, $descriptionColor);
+        text-align: left;
         margin: 0 0 15px;
     }
 }
