--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -1,7 +1,7 @@
 @import '../common/styles/sass/variables.scss';
 
 .mainBlock {
-    height: 100vh;
+    min-height: 100vh;
     background-color: $backgroundMainColor;
     flex-wrap: wrap;
 
