--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -17,7 +17,7 @@
         color: $descriptionColor;
         border: 2px solid hsla(0, 0%, 100%, .2);
         display: block;
-        width: 100%;
+        min-width: 100%;
         padding: 0 20px;
         border-radius: 5px;
         height: 50px;
