--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -10,6 +10,10 @@
         justify-content: flex-start;
 
         .skills {
+            
+            @media screen and (max-width: 906px) {
+                justify-content: center;
+            }
         /*  font-size: 14px;
             line-height: 1.71429;
             font-weight: 400;
