--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -8,15 +8,14 @@
     .mainContainer {
         display: flex;
         flex-direction: row;
+        align-items: center;
+        justify-content: center;
         border: 1px solid;
         width: 80%;
         height: 100%;
         margin: 0 auto;
-        align-items: center;
-        justify-content: space-around;
         flex-wrap: wrap;
-        padding: 30px 0px;
-
+        padding: 180px 0px;
         .greetings {
             display: flex;
             flex-direction: column;
@@ -67,6 +66,7 @@
         }
 
         .foto {
+            margin-left: 60px;
             border: solid 1px coral;
             width: 300px;
             height: 400px;
