--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -3,9 +3,15 @@
 .header {
     padding-top: 25px;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding-left: 50px;
     padding-right: 50px;
     background-color: $backgroundMainColor;
 }
+@media screen and (max-width: 600px) {
+    .header {
+    flex-direction: column;
+    justify-content: center;
+    }
+} 
