--- a/src/hireMe/HireMe.module.scss
+++ b/src/hireMe/HireMe.module.scss
@@ -5,7 +5,7 @@
     background: $backgroundSecondColor;
 
     .hireMeContainer {
-        height: 70vh;
+        min-height: 70vh;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
@@ -29,5 +29,6 @@
             height: 500px;
             background-color: beige;
         }
+
     }
 }
