--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -16,6 +16,7 @@
         margin: 0 auto;
         flex-wrap: wrap;
         padding: 180px 0px;
+
         .greetings {
             display: flex;
             flex-direction: column;
@@ -32,6 +33,7 @@
                 line-height: 1.71429;
                 font-family: 'Poppins', sans-serif;
                 font-weight: 400;
+
             }
 
             & h1 {
@@ -71,6 +73,11 @@
             width: 300px;
             height: 400px;
             background-color: beige;
+
+            @media screen and (max-width: 1511px) {
+                justify-content: center;
+                margin-left: 0px;
+            }
         }
     }
 }
