--- a/src/common/styles/Container.module.scss
+++ b/src/common/styles/Container.module.scss
@@ -1,5 +1,5 @@
 .container {
-    border: 1px solid;
+    border: 1px solid rgb(196, 248, 250);
     width: 80%;
     height: 100%;
     margin: 0 auto;
