--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -8,10 +8,9 @@
     padding-left: 50px;
     padding-right: 50px;
     background-color: $backgroundMainColor;
-}
-@media screen and (max-width: 600px) {
-    .header {
-    flex-direction: column;
-    justify-content: center;
+
+    @media screen and (max-width: 820px) {
+        flex-direction: column;
+        align-items: center;
     }
-} 
+}
