--- a/src/hireMe/HireMe.module.scss
+++ b/src/hireMe/HireMe.module.scss
@@ -10,25 +10,30 @@
         flex-wrap: wrap;
         align-items: center;
         justify-content: space-around;
+        @media screen and (max-width: 1450px) {
+            justify-content: center;
+            flex-direction: column;
+    }
 
         .hireMeArea {
             flex-direction: column;
             justify-content: center;
             text-align: left;
-            padding-bottom: 20px;
-            margin-bottom: 50px;
         }
 
         .titleHireMe {
             white-space: pre-wrap;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
         }
 
         .foto {
             width: 400px;
             height: 500px;
             background-color: beige;
+            @media screen and (max-width: 1450px) {
+               margin-top: 30px;
         }
-
+            
+        }
     }
 }
