--- a/src/hireMe/HireMe.module.scss
+++ b/src/hireMe/HireMe.module.scss
@@ -25,7 +25,8 @@
         }
 
         .foto {
-            width: 400px;
+            max-width: 400px;
+            width: 100%;
             height: 500px;
             background-color: beige;
         }
