--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -16,12 +16,14 @@
         margin: 0 auto;
         flex-wrap: wrap;
         padding: 180px 0px;
-
+        @media screen and (max-width: 460px) {
+            padding: 80px 0px;
+        }
         .greetings {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            justify-content: center;
+            justify-content: flex-start;
 
             & span {
                 border: solid 1px coral;
@@ -33,7 +35,6 @@
                 line-height: 1.71429;
                 font-family: 'Poppins', sans-serif;
                 font-weight: 400;
-
             }
 
             & h1 {
@@ -44,6 +45,10 @@
                 font-family: Montserrat, sans-serif;
                 line-height: 90px;
                 margin: 0px;
+                @media screen and (max-width: 460px) {
+                    font-size: 40px;
+                    line-height: 50px;
+                }
             }
 
             & h2 {
@@ -54,6 +59,10 @@
                 font-family: Montserrat, sans-serif;
                 line-height: 90px;
                 color: $primeryColor;
+                @media screen and (max-width: 460px) {
+                    font-size: 40px;   
+                    line-height: 50px;         
+                }
             }
 
             & p {
@@ -64,13 +73,18 @@
                 font-family: 'Poppins', sans-serif;
                 line-height: 1.4074;
                 color: $titleColor;
+                @media screen and (max-width: 460px) {
+                    font-size: 23px;                 
+                }
             }
+           
         }
 
         .foto {
             margin-left: 60px;
             border: solid 1px coral;
-            width: 300px;
+            max-width: 300px;
+            width: 100%;
             height: 400px;
             background-color: beige;
 
