--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -5,6 +5,15 @@
     background-color: $backgroundMainColor;
     flex-wrap: wrap;
 
+    .particles {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+
+    }
+
     .mainContainer {
         display: flex;
         flex-direction: row;
