--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -2,7 +2,7 @@
 
 .mainBlock {
     min-height: 100vh;
-    background: linear-gradient(120deg,#f9004d, 5%,#101010);
+    background: linear-gradient(120deg, #f9004d, 5%, #101010);
     flex-wrap: wrap;
 
     .mainContainer {
@@ -16,9 +16,11 @@
         margin: 0 auto;
         flex-wrap: wrap;
         padding: 180px 0px;
+
         @media screen and (max-width: 460px) {
             padding: 80px 0px;
         }
+
         .greetings {
             display: flex;
             flex-direction: column;
@@ -26,58 +28,48 @@
             justify-content: flex-start;
 
             & span {
-                border: solid 1px coral;
                 color: $descriptionColor;
                 font-size: 15px;
                 text-transform: uppercase;
                 letter-spacing: 4px;
-                margin-bottom: 20px;
+                margin-bottom: 15px;
                 line-height: 1.71429;
                 font-family: 'Poppins', sans-serif;
-                font-weight: 400;
+                font-weight: 600;
+
+                &:nth-child(3) {
+                    font-size: 55px;
+                    font-weight: 900;
+                    font-family: Montserrat, sans-serif;
+                    line-height: 90px;
+                    color: $primeryColor;
+
+                    .cursor {
+                        color: $primeryColor;
+                        font-size: 42px;
+
+                    }
+
+                    @media screen and (max-width: 460px) {
+                        font-size: 40px;
+                        line-height: 50px;
+                    }
+                }
             }
 
             & h1 {
-                border: solid 1px coral;
                 color: #fff;
                 font-size: 75px;
                 font-weight: 900;
                 font-family: Montserrat, sans-serif;
                 line-height: 90px;
                 margin: 0px;
+
                 @media screen and (max-width: 460px) {
                     font-size: 40px;
                     line-height: 50px;
                 }
             }
-
-            & h2 {
-                border: solid 1px coral;
-                margin: 0px;
-                font-size: 75px;
-                font-weight: 900;
-                font-family: Montserrat, sans-serif;
-                line-height: 90px;
-                color: $primeryColor;
-                @media screen and (max-width: 460px) {
-                    font-size: 40px;   
-                    line-height: 50px;         
-                }
-            }
-
-            & p {
-                border: solid 1px coral;
-                margin: 0 0 15px;
-                font-size: 54px;
-                font-weight: 700;
-                font-family: 'Poppins', sans-serif;
-                line-height: 1.4074;
-                color: $titleColor;
-                @media screen and (max-width: 460px) {
-                    font-size: 23px;                 
-                }
-            }
-           
         }
 
         .foto {
@@ -94,4 +86,5 @@
             }
         }
     }
+
 }
