--- a/src/common/components/mySocialNetworks/MySocialNetworks.module.scss
+++ b/src/common/components/mySocialNetworks/MySocialNetworks.module.scss
@@ -13,6 +13,7 @@
         color: $primeryColor;
         &:hover {
             transform: scale(1.2);
+            transition: 0.3s;
         }
     }
 
