--- a/src/nav/Nav.module.scss
+++ b/src/nav/Nav.module.scss
@@ -1,30 +1,34 @@
 @import '../common/styles/sass/variables.scss';
 
 .nav {
-    border: 1px solid;
     width: 400px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     list-style: none;
 
-    & a {
+    a {
         font-family: 'Poppins', sans-serif;
         color: $titleColor;
         font-size: 16px;
+        text-decoration: none;
         font-weight: 500;
         padding: 20px 0;
-        text-decoration: none;
         line-height: 1.71429;
         text-align: left;
+        
+        &:hover {
+            text-decoration: none;
+            color: $primeryColor;
+            
+        }
     }
-
-    & a:hover {
+    .active {
         color: $primeryColor;
     }
-
     .logo {
         height: 55px;
         width: 55px;
     }
+
 }
