--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,21 +1,25 @@
 @import '../common/styles/sass/variables.scss';
 
 .header {
-    position:fixed;
-    top:0;
-    display:block;
+    position: fixed;
+    top: 0;
+    display: block;
     z-index: 1;
     min-width: 100%;
-    padding-top: 25px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-    padding-left: 50px;
-    padding-right: 50px;
+    align-items: center;
+    align-content: center;
     background-color: $backgroundMainColor;
 
     @media screen and (max-width: 820px) {
+        display: flex;
         flex-direction: column;
+        justify-content: flex-start;
         align-items: center;
+        position: absolute;
+
+
+
     }
 }
