--- a/src/header/burgerNav/BurgerNav.module.scss
+++ b/src/header/burgerNav/BurgerNav.module.scss
@@ -1,15 +1,22 @@
 @import '../../common/styles/sass/variables.scss';
 
 .burgerNav {
-    width: 100%;
     background-color: antiquewhite;
     position: relative;
+    width: 100%;
+    height: 100%;
     .burgerNavItems {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         list-style: none;
+        background-color: rgb(218, 248, 187);
+        flex-wrap: nowrap;
+        position: absolute;
+        right: 0;
+        top: 50px;
+        display: none;
         a {
             font-family: 'Poppins', sans-serif;
             color: $titleColor;
@@ -30,17 +37,18 @@
             color: $primeryColor;
         }
 
-        @media screen and (min-width: 420px) {
-            display: none;
-        }
+
     }
     .burgerBtn {
         width: 30px;
         height: 30px;
         background-color: $primeryColor;
         position: absolute;
-        top: 10px;
-        right: 0;
+        top: 24px;
+        right: 30px;
+    }
+    @media screen and (min-width: 420px) {
+        display: none;
     }
 
     .logo {
