--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -17,8 +17,8 @@
         flex-wrap: wrap;
         padding: 180px 0px;
 
-        @media screen and (max-width: 460px) {
-            padding: 80px 0px;
+        @media screen and (max-width: 420px) {
+           padding-top: 60px;
         }
 
         .greetings {
