--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -4,11 +4,11 @@
     position: fixed;
     top: 0;
     display: block;
-    z-index: 1;
+    z-index: 9999;
     min-width: 100%;
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     background-color: $backgroundMainColor;
 
     @media screen and (max-width: 760px) {
