--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -5,3 +5,4 @@ $backgroundMainColor: black;
 $backgroundSecondColor: #101010;
 $backgroundDescriptionColor: #191919;
 $fontFamilyPoppins: 'Poppins', sans-serif;
+$fontFamilyMontserrat: 'Montserrat', sans-serif;
