--- a/src/common/components/mySocialNetworks/MySocialNetworks.module.scss
+++ b/src/common/components/mySocialNetworks/MySocialNetworks.module.scss
@@ -1,19 +1,17 @@
 @import '../../styles/sass/variables.scss';
 
 .social {
-    border: 1px solid;
-    width: 280px;
+    width: 300px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
-    margin: 6px;
     list-style: none;
     .icon {
-        color: $primeryColor;
+        color: $titleColor;
         &:hover {
             transform: scale(1.05);
-            transition: 0.2s;
+            transition: 0.1s;
+            color: $primeryColor;
         }
     }
     @media screen and (max-width: 420px) {
