--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,20 +1,25 @@
 @import '../common/styles/sass/variables.scss';
 
-.header {
+.headerBlock {
+    //height: 200px;
     position: fixed;
     top: 0;
     display: block;
     z-index: 9999;
-    min-width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    background-color: $backgroundMainColor;
+    width: 100%;
 
-    @media screen and (max-width: 760px) {
-        flex-direction: column;
-        justify-content: flex-start;
+    .header {
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
         align-items: center;
-        position: absolute;
+        background-color: $backgroundMainColor;
+
+        @media screen and (max-width: 760px) {
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+        }
     }
 }
