--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -1,4 +1,5 @@
 @import '../common/styles/sass/variables.scss';
+@import '../common/styles/sass/mixins.scss';
 
 .mainBlock {
     min-height: 100vh;
@@ -9,16 +10,15 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: center;
+        justify-content:space-around;
         border: 1px solid;
         width: 80%;
-        height: 100%;
         margin: 0 auto;
         flex-wrap: wrap;
-        padding: 180px 0px;
+        padding: 260px 0px;
 
         @media screen and (max-width: 420px) {
-           padding-top: 60px;
+            padding-top: 60px;
         }
 
         .greetings {
@@ -28,26 +28,26 @@
             justify-content: flex-start;
 
             & span {
-                color: $descriptionColor;
-                font-size: 15px;
-                text-transform: uppercase;
-                letter-spacing: 4px;
-                margin-bottom: 15px;
+                /* color: $descriptionColor;
+                font-size: 15px;                
                 line-height: 1.71429;
                 font-family: 'Poppins', sans-serif;
-                font-weight: 600;
+                font-weight: 600; */
+                @include text (17px, 1.71429, 600, $fontFamilyPoppins, $descriptionColor);
+                text-transform: uppercase;
+                letter-spacing: 4px;
 
                 &:nth-child(3) {
-                    font-size: 55px;
+                    /*                     font-size: 55px;
                     font-weight: 900;
                     font-family: Montserrat, sans-serif;
                     line-height: 90px;
-                    color: $primeryColor;
+                    color: $primeryColor; */
+                    @include text (55px, 90px, 900, $fontFamilyMontserrat, $primeryColor);
 
                     .cursor {
                         color: $primeryColor;
                         font-size: 42px;
-
                     }
 
                     @media screen and (max-width: 460px) {
@@ -58,32 +58,32 @@
             }
 
             & h1 {
-                color: #fff;
+                /*              color: #fff;
                 font-size: 75px;
                 font-weight: 900;
                 font-family: Montserrat, sans-serif;
                 line-height: 90px;
-                margin: 0px;
-
-                @media screen and (max-width: 460px) {
-                    font-size: 40px;
-                    line-height: 50px;
-                }
+                margin: 0px; */
+                @include text (75px, 90px, 900, $fontFamilyMontserrat, $titleColor);
             }
-        }
 
-        .foto {
-            margin-left: 60px;
-            border: solid 1px coral;
-            max-width: 400px;
-            width: 100%;
-            height: 400px;
-
-            @media screen and (max-width: 1511px) {
-                justify-content: center;
-                margin-left: 0px;
+            @media screen and (max-width: 460px) {
+                font-size: 40px;
+                line-height: 50px;
             }
         }
     }
 
+    .foto {
+        margin-left: 60px;
+        border: solid 1px coral;
+        max-width: 400px;
+        width: 100%;
+        height: 400px;
+
+        @media screen and (max-width: 1511px) {
+            justify-content: center;
+            margin-left: 0px;
+        }
+    }
 }
