--- a/src/projects/Projects.module.scss
+++ b/src/projects/Projects.module.scss
@@ -1,7 +1,7 @@
 @import '../common/styles/sass/variables.scss';
 
 .projectsBlock {
-
+    min-height: 100vh;
     background-color: $backgroundMainColor;
 
     .projectsContainer {
@@ -9,20 +9,17 @@
         justify-content: flex-start;
 
         .projects {
-            height: auto;
-            font-family: 'Poppins', sans-serif;
-            border: 1px solid;
             width: 100%;
+            height: auto;
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
             box-sizing: border-box;
             margin-top: 30px;
-            align-items: flex-start;
+
             @media screen and (max-width: 1002px) {
                 justify-content: center;
-        }
+            }
         }
     }
 }
-
