--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -11,15 +11,16 @@
 
         &:hover {
             transform: scale(1.05);
+            cursor: pointer;
         }
     }
 
     .project {
         text-align: left;
-        padding: 15px;
+        padding: 0px 15px;
 
         .projectTitle {
-         /* font-size: 24px;
+            /* font-size: 24px;
             line-height: 36px;
             font-weight: 600;
             font-family: 'Poppins', sans-serif;
@@ -28,12 +29,12 @@
         }
 
         .description {
-         /* font-size: 14px;
+            /* font-size: 14px;
             line-height: 30px;
             font-weight: 400;
             font-family: 'Poppins', sans-serif;
             color: $descriptionColor; */
-            @include text (14px, 30px, 400, $fontFamilyPoppins, $descriptionColor);
+            @include text (16px, 30px, 400, $fontFamilyPoppins, $descriptionColor);
         }
     }
 }
